# python-build-test

./: pyproject.toml
.github/workflows/: publish.yml
src/samplepkg/: __init__.py
tests/: test_core.py
